Update Hospital UI

--- a/BergmanHospitalUI/Layout/AdminLayout.razor
+++ b/BergmanHospitalUI/Layout/AdminLayout.razor
@@ -4,11 +4,10 @@
 
 <SharedLayoutShell Title="Admin Dashboard">
     <SidebarContent>
-        <NavLink href="/" class="nav-link">Dashboard</NavLink>
-        <NavLink href="/users" class="nav-link">Users</NavLink>
-        <NavLink href="/appointments" class="nav-link">All Appointments</NavLink>
-        <NavLink href="/pending-doctors" class="nav-link">Pending Doctors</NavLink>
-
+        <NavLink href="/" class="nav-link" style="color: white;">Dashboard</NavLink>
+        <NavLink href="/users" class="nav-link" style="color: white;">Users</NavLink>
+        <NavLink href="/appointments" class="nav-link" style="color: white;">Appointments</NavLink>
+        <NavLink href="/pending-doctors" class="nav-link" style="color: white;">Pending Doctors</NavLink>
     </SidebarContent>
 
     <ChildContent>
