--- a/BergmanHospitalUI/Layout/DoctorLayout.razor
+++ b/BergmanHospitalUI/Layout/DoctorLayout.razor
@@ -4,10 +4,10 @@
 
 <SharedLayoutShell Title="Doctor Dashboard">
     <SidebarContent>
-        <NavLink href="/" class="nav-link">Dashboard</NavLink>
-        <NavLink href="/appointments" class="nav-link">My Appointments</NavLink>
-        <NavLink href="/patients" class="nav-link">My Patients</NavLink>
-        <NavLink href="/doctor-prescriptions" class="nav-link">My Prescriptions</NavLink>
+        <NavLink href="/" class="nav-link" style="color: white;">Dashboard</NavLink>
+        <NavLink href="/appointments" class="nav-link" style="color: white;">Appointments</NavLink>
+        <NavLink href="/patients" class="nav-link" style="color: white;">Patients</NavLink>
+        <NavLink href="/doctor-prescriptions" class="nav-link" style="color: white;">Prescriptions</NavLink>
     </SidebarContent>
 
     <ChildContent>
