--- a/BergmanHospitalUI/Layout/PatientLayout.razor
+++ b/BergmanHospitalUI/Layout/PatientLayout.razor
@@ -4,10 +4,10 @@
 
 <SharedLayoutShell Title="Patient Dashboard">
     <SidebarContent>
-        <NavLink href="/" class="nav-link">Dashboard</NavLink>
-        <NavLink href="/book" class="nav-link">Book Appointment</NavLink>
-        <NavLink href="/my-appointments" class="nav-link">My Appointments</NavLink>
-        <NavLink href="/prescriptions" class="nav-link">My Prescriptions</NavLink>
+        <NavLink href="/" class="nav-link" style="color: white;">Dashboard</NavLink>
+        <NavLink href="/book" class="nav-link" style="color: white;">Book Appointment</NavLink>
+        <NavLink href="/my-appointments" class="nav-link" style="color: white;">My Appointments</NavLink>
+        <NavLink href="/prescriptions" class="nav-link" style="color: white;">Prescriptions</NavLink>
     </SidebarContent>
 
     <ChildContent>
