--- a/BergmanHospitalUI/Pages/Logout.razor
+++ b/BergmanHospitalUI/Pages/Logout.razor
@@ -17,6 +17,6 @@
             auth.NotifyAuthenticationStateChanged();
         }
 
-        Nav.NavigateTo("/login", true);
+        Nav.NavigateTo("/", true);
     }
 }
