--- a/BergmanHospitalUI/Layout/MainLayout.razor
+++ b/BergmanHospitalUI/Layout/MainLayout.razor
@@ -1,18 +1,20 @@
-﻿@namespace BergmanHospitalUI.Layout
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 
-<div class="main-layout">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<div class="d-flex">
+    @* <nav class="sidebar bg-light p-3">
+        <!-- Add dynamic links based on role if needed -->
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <NavLink class="nav-link" href="/">Home</NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="/appointments">Appointments</NavLink>
+            </li>
+            <!-- Add more links -->
+        </ul>
+    </nav> *@
 
-    <main class="main-content">
-        <div class="top-row px-4">
-            <a href="#">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
+    <main class="flex-grow-1 p-4">
+        @Body
     </main>
 </div>
