--- a/BergmanHospitalUI/Pages/AdminHome.razor
+++ b/BergmanHospitalUI/Pages/AdminHome.razor
@@ -2,7 +2,7 @@
 
 <div class="mb-3 d-flex align-items-center gap-2">
     <p>
-        Welcome to the Admin Dashboard.<br />
+        Welcome to the Admin Dashboard<br />
         This is your central hub for managing users, approving doctor accounts, and overseeing appointments across the system.
     </p>
 </div>
